# BSU

./: regex.cpp  наследование.cpp
QList/: main.cpp
Semester_2/Labs/: шаблоны.cpp
Semester_2/Labs/QList/: lab5.pro
Semester_2/Labs/Конвертер времени/: dialog.cpp  dialog.ui  mainwindow.cpp  mainwindow.ui
Semester_2/Labs/двусвязный список/: header.h  main.cpp  methods.cpp
Semester_2/Practice/Task1/: journals.cpp  journals.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  task1.pro
Semester_2/Practice/Task2/: tst_testjournals.cpp
Semester_3/Java/Lab1/: Calc.java  CalcTest.java  Form.java  FormTest.java  Main.java  pom.xml
Semester_3/Java/Lab2/: Main.java  String_Processer.java  String_Processer_Test.java  Year_Comparator.java  Year_Comparator_Test.java  pom.xml
Semester_3/Java/Lab3/: AbstractBoat.java  AbstractBoatStorage.java  Archiver.java  Boat.java  BoatList.java  BoatListTest.java  BoatMap.java  BoatTest.java  CipherHandler.java  FileHandler.java  Menu.java  pom.xml
Semester_3/OS/Colloquium_2/: pom.xml  task.txt
Semester_3/OS/Colloquium_23.10/: CMakeLists.txt  task.txt
Semester_3/OS/Colloquium_23.10/headers/: list.h  tasks.h
Semester_3/OS/Colloquium_23.10/src/: list.cpp  main.cpp  tasks.cpp
Semester_3/OS/Colloquium_23.10/tests/: list_test.cpp  tasks_test.cpp
Semester_3/OS/Lab1/: CMakeLists.txt  Creator.cpp  Main.cpp  Reporter.cpp  employee.h
Semester_3/OS/Lab2/: CMakeLists.txt  Main.cpp  task.txt
Semester_3/OS/Lab2/include/: std_thread.h
Semester_3/OS/Lab2/src/: main_std_thread.cpp  main_win_api.cpp  std_thread.cpp
Semester_3/OS/Lab2/tests/: std_thread_test.cpp
Semester_3/OS/Lab3/: task.txt
Semester_3/OS/Lab3/C++11/: CMakeLists.txt
Semester_3/OS/Lab3/C++11/include/: marker.h
Semester_3/OS/Lab3/C++98/: CMakeLists.txt
Semester_3/OS/Lab3/C++98/include/: marker.h
Semester_3/OS/Lab3/C++98/src/: marker.cpp
Semester_3/OS/Lab3/C++98/tests/: marker_test.cpp
Semester_3/OS/Lab4/: task.txt
Semester_3/OS/Lab4/C++98/: CMakeLists.txt
Конвертер времени/: dialog.h  mainwindow.h
(+14 files in other folders)
